# ddd-fastapi-template

./: .env  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/application/user/: create_user.py  get_users.py
src/domain/user/: entity.py  repo.py
src/infrastructure/: injections.py
src/infrastructure/database/: models.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 345e04e8b1cb_user.py
src/infrastructure/database/repos/: user.py
src/infrastructure/http/: server.py
src/infrastructure/http/user/: __init__.py  create.py  list.py  router.py
test/src/application/user/: test_create_user.py  test_get_user.py
test/src/infrastructure/: test_server.py
test/src/infrastructure/database/repos/: test_user.py
test/src/infrastructure/http/: test_server.py
test/src/infrastructure/http/user/: test_user_create.py  test_user_list.py
